@@ -13,22 +13,26 @@ EBUILD eselect-emacs-0.2.ebuild 528 RMD160 e1c648335460edf026208a303b6269750be4b
 MD5 6a0bcaba1a4108ba4898720b0e4002ef eselect-emacs-0.2.ebuild 528
 RMD160 e1c648335460edf026208a303b6269750be4b4b9 eselect-emacs-0.2.ebuild 528
 SHA256 9cf684388be458d73beafe08e53d139521bfc1d254b09890e3a3f7d56b422c6b eselect-emacs-0.2.ebuild 528
-EBUILD eselect-emacs-0.3-r1.ebuild 590 RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 SHA1 8fe50fcb35d489dbf471ce43db138a83cea34d93 SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1
-MD5 9a1690d5d8fdd752226bdac9688e9293 eselect-emacs-0.3-r1.ebuild 590
-RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 eselect-emacs-0.3-r1.ebuild 590
-SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1 eselect-emacs-0.3-r1.ebuild 590
+EBUILD eselect-emacs-0.3-r2.ebuild 602 RMD160 59563c703cdac1e47cfaba5d2c95c99200a1ec95 SHA1 b0b87f412d3fe4781aa4edf9cd9476742409526c SHA256 86b306effafc7ffa6962c228ff9ea351ac9e494f095758c439b56f4ca369028f
+MD5 0c225f6805f5b7b5f4b40f0cb47cff1d eselect-emacs-0.3-r2.ebuild 602
+RMD160 59563c703cdac1e47cfaba5d2c95c99200a1ec95 eselect-emacs-0.3-r2.ebuild 602
+SHA256 86b306effafc7ffa6962c228ff9ea351ac9e494f095758c439b56f4ca369028f eselect-emacs-0.3-r2.ebuild 602
 EBUILD eselect-emacs-0.3.ebuild 508 RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619999 SHA1 672876fe421056ab6188c3e24ac183aa59b1aac6 SHA256 064322d62c6eecec6434032e2c5d7b1f882d96e2eb377a6b207efb59beba6fe6
 MD5 5b228b5ca3cdfe885432e168d929ff72 eselect-emacs-0.3.ebuild 508
 RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619999 eselect-emacs-0.3.ebuild 508
 SHA256 064322d62c6eecec6434032e2c5d7b1f882d96e2eb377a6b207efb59beba6fe6 eselect-emacs-0.3.ebuild 508
-MISC ChangeLog 2029 RMD160 e7bc5715fd67cbaf33f7085c38b4cfe0fa0bb84e SHA1 6bb39fe676dd659c6bdec65cebc45cef90583342 SHA256 387c7fea5276cce8b38e47666e86696675b961c6789cd82db856b8b99f922a11
-MD5 887d900a4441cfb165c31455f82b5715 ChangeLog 2029
-RMD160 e7bc5715fd67cbaf33f7085c38b4cfe0fa0bb84e ChangeLog 2029
-SHA256 387c7fea5276cce8b38e47666e86696675b961c6789cd82db856b8b99f922a11 ChangeLog 2029
-MISC eselect-emacs-0.3-r1.ebuild~ 508 RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619999 SHA1 672876fe421056ab6188c3e24ac183aa59b1aac6 SHA256 064322d62c6eecec6434032e2c5d7b1f882d96e2eb377a6b207efb59beba6fe6
-MD5 5b228b5ca3cdfe885432e168d929ff72 eselect-emacs-0.3-r1.ebuild~ 508
-RMD160 a3b40f1b48f51d0f35146f701fca9b3b3c619999 eselect-emacs-0.3-r1.ebuild~ 508
-SHA256 064322d62c6eecec6434032e2c5d7b1f882d96e2eb377a6b207efb59beba6fe6 eselect-emacs-0.3-r1.ebuild~ 508
+MISC ChangeLog 2204 RMD160 81a125e7b4c290044814839f33309fb3e08fc640 SHA1 ad7726b3bd14248268bb79c3a6d1e3c740cc5b9d SHA256 fb7ef5f278a4949197ad1cdf1a61d0222696cb31c444b9c7e52f9c35033cd2be
+MD5 2961bdc7d3f699e8d60db629024f505d ChangeLog 2204
+RMD160 81a125e7b4c290044814839f33309fb3e08fc640 ChangeLog 2204
+SHA256 fb7ef5f278a4949197ad1cdf1a61d0222696cb31c444b9c7e52f9c35033cd2be ChangeLog 2204
+MISC ChangeLog~ 2296 RMD160 16634243021a48586d14b77fc2107dab8edc56fc SHA1 e70f85ab18947fc3694e40b007f6cb31626ffc53 SHA256 7b933f68388e21d9ad21209c32c1836e484f37fe3f80c30f68bd0e8dc21cd171
+MD5 db1e9acdeeaa7744cefc9c0b2e45bc61 ChangeLog~ 2296
+RMD160 16634243021a48586d14b77fc2107dab8edc56fc ChangeLog~ 2296
+SHA256 7b933f68388e21d9ad21209c32c1836e484f37fe3f80c30f68bd0e8dc21cd171 ChangeLog~ 2296
+MISC eselect-emacs-0.3-r2.ebuild~ 590 RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 SHA1 8fe50fcb35d489dbf471ce43db138a83cea34d93 SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1
+MD5 9a1690d5d8fdd752226bdac9688e9293 eselect-emacs-0.3-r2.ebuild~ 590
+RMD160 a5102a1e548ba4f511b1b2732be42cf05bd809f0 eselect-emacs-0.3-r2.ebuild~ 590
+SHA256 2a05d936ee32e688e4438689bd52d8738ad2950c55ed1c3d0524c1ee0be17bc1 eselect-emacs-0.3-r2.ebuild~ 590
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -42,6 +46,6 @@ SHA256 dd00a9243490e859b5c57d050d604c1a319b2da06d6d0e7bfb426501833aa7f9 files/di
 MD5 9bc880d045ed0c69c59f53bef36afe54 files/digest-eselect-emacs-0.3 250
 RMD160 c44f4f37f6847bccd82b4544908aba20310ad4d2 files/digest-eselect-emacs-0.3 250
 SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/digest-eselect-emacs-0.3 250
-MD5 9bc880d045ed0c69c59f53bef36afe54 files/digest-eselect-emacs-0.3-r1 250
-RMD160 c44f4f37f6847bccd82b4544908aba20310ad4d2 files/digest-eselect-emacs-0.3-r1 250
-SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/digest-eselect-emacs-0.3-r1 250
+MD5 9bc880d045ed0c69c59f53bef36afe54 files/digest-eselect-emacs-0.3-r2 250
+RMD160 c44f4f37f6847bccd82b4544908aba20310ad4d2 files/digest-eselect-emacs-0.3-r2 250
+SHA256 5b12ddf43083562b2123d44e9744e243b9eee078b1988d29742f17e193cb4fde files/digest-eselect-emacs-0.3-r2 250
