@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  -eselect-emacs-0.3-r1.ebuild, +eselect-emacs-0.3-r2.ebuild:
+  Install desktop file and icon only if X USE flag is set.
+
   20 Mar 2007; <ulm@gentoo.org> +eselect-emacs-0.3-r1.ebuild,
   +files/eselect-emacs-0.3-r119.patch:
   Make linking to XEmacs auxiliary programs really work.
